<resources>
    <string name="app_name">Akafist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Главная</string>
    <string name="menu_title">Меню</string>
    <string name="sucessDownload">Скачивание завершено</string>
    <string name="failDownload">Ошибка при скачивании</string>
    <string name="againDownload">Попробуйте скачать заново</string>
    <string name="skype_confs">Онлайн конференции</string>
    <string name="skype_confs_2">для групп</string>
    <string name="skype_confs_title">Конференции по группам</string>
    <string name="online_Michael">Онлайн-трансляция</string>
    <string name="online_Michael_2">общины арх. Михаила</string>
    <string name="online_Michael_3">Онлайн-трансляция общины арх. Михаила</string>
    <string name="link_Michael">http://radio.zakonbozhiy.ru:8000/live.mp3"</string>
    <string name="online_Varvara">Онлайн-трансляция</string>
    <string name="online_Varvara_2">общины вмц. Варвары</string>
    <string name="online_Varvara_3">Онлайн-трансляция общины вмц. Варвары</string>
    <string name="link_Varvara">http://radio.zakonbozhiy.ru:8010/kem.mp3</string>
    <string name="molitvy_offline">Молитвы</string>
    <string name="molitvy_offline_2">оффлайн</string>
    <string name="molitvy_offline_3">Молитвы оффлайн</string>
    <string name="links">Записи просветительских бесед</string>
    <string name="links1">Записи</string>
    <string name="links2">просветительских бесед</string>
    <string name="text_for_agreement">Переходя на эту страницу, вы соглашаетесь с скачиванием файлов из Интернета.</string>
    <string name="agree_agreement">Согласен</string>
    <string name="disagree_agrrement">Не согласен</string>
    <string name="notes">Подать записку онлайн</string>
    <string name="notes1">Подать записку</string>
    <string name="notes2">онлайн</string>
    <string name="link_notes">https://pr.energogroup.org/notes/note/add</string>
    <string name="talks">Задать вопрос Священнику или в Духовный Блок</string>
    <string name="talks1">Задать вопрос</string>
    <string name="talks2">Священнику или в Духовный Блок</string>
    <string name="link_talks">https://pr.energogroup.org/talks/talk</string>
    <string name="day_Michael">Служба в храме арх. Михаила сегодня</string>
    <string name="everyday_title">Ежедневные молитвы</string>
    <string name="everyday_subtitle">утром и вечером</string>
    <string name="everyday_after_6">в 18:00</string>
    <string name="everyday_after_8">в 8:00</string>
    <string name="everyday_after_5">в 17:00</string>
    <string name="psaltir_title">Псалтирь</string>
    <string name="psaltir_subtitle">для ежедневного чтения</string>
    <string name="needs_title">Молитвы</string>
    <string name="needs_subtitle">на всякую потребу</string>
    <string name="needs_health">О здравии</string>
    <string name="needs_prichastiye">Молитвенное правило ко Святому Причащению</string>
    <string name="molitva_po_soglasheniyu_title">Молитва по соглашению</string>
    <string name="molitva_ytrenya_polynosh_title">Молитва утренняя Полуношница</string>
    <string name="molitva_ytrenya_pomyannik_title">Молитва утренняя c помянником</string>
    <string name="zoom_out">Уменьшить</string>
    <string name="to_menu">Меню</string>
    <string name="zoom_in">Увеличить</string>
    <string name="next_prayer">Следующее</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="large_text_2">
        "Начало обычное"
        "Восстав от сна, прежде всякого другого дела, стань благоговейно, представляя себя пред Всевидящим Богом, и, совершая крестное знамение, произнеси:[1]"
        "Во и́мя Отца́, и Сы́на, и Свята́го Ду́ха, Ами́нь."
        "Затем немного подожди, пока все чувства твои не придут в тишину и мысли твои не оставят все земное, и тогда произноси следующие молитвы, без поспешности и со вниманием сердечным:"
        "Бо́же, ми́лостив бу́ди мне гре́шному."
        "\n"
        "Молитва предначинательная"
        "Го́споди Иису́се Христе́, Сы́не Бо́жий, молитв ра́ди Пречи́стыя Твоея́ Ма́тере и всех святы́х, поми́луй нас. Ами́нь."
        "Сла́ва Тебе́, Бо́же наш, сла́ва Тебе́."
        "\n"
        "Молитва Святому Духу"
        "Царю́ Небе́сный, Уте́шителю, Ду́ше и́стины, И́же везде́ сый и вся исполня́яй, Сокро́вище благи́х и жи́зни Пода́телю, прииди́ и всели́ся в ны, и очи́сти ны от вся́кия скве́рны, и спаси́, Бла́же, ду́ши на́ша."
        "\n"
        "Трисвятое"
        "Святы́й Бо́же, Святы́й Кре́пкий, Святы́й Безсме́ртный, поми́луй нас. (Читается трижды, с крестным знамением и поясным поклоном.)"
        "\n"
        "Сла́ва Отцу́ и Сы́ну и Свято́му Ду́ху, и ны́не и при́сно и во ве́ки веко́в. Ами́нь[2]."
        "\n"
        "Молитва ко Пресвятой Тро́ице"
        "Пресвята́я Тро́ице, поми́луй нас; Го́споди, очи́сти грехи́ на́ша; Влады́ко, прости́ беззако́ния на́ша; Святы́й, посети́ и исцели́ не́мощи на́ша, и́мене Твоего́ ра́ди."
        "Го́споди, поми́луй. (Трижды)."
        "Сла́ва Отцу́ и Сы́ну и Свято́му Ду́ху, и ны́не и при́сно и во ве́ки веко́в. Ами́нь."
    </string>
</resources>