<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".fragments.NeedsFragment">

    <TextView
        android:id="@+id/needs_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/cyrillic_old"
        android:padding="10dp"
        android:text="@string/needs_title"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/needs_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/needs_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cyrillic_old"
        android:padding="5dp"
        android:text="@string/needs_subtitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/needs_title"
        app:layout_constraintStart_toStartOf="@+id/needs_title"
        app:layout_constraintTop_toBottomOf="@+id/needs_title" />

    <TextView
        android:id="@+id/needs_health"
        style="@style/everyday_time_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/beige_200"
        android:text="@string/needs_health"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/needsRvHealth"
        app:layout_constraintEnd_toStartOf="@+id/needs_prichastiye"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needs_subtitle"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/needs_prichastiye"
        style="@style/everyday_time_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/needs_prichastiye"
        app:layout_constraintBottom_toTopOf="@+id/needsRvHealth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/needs_health"
        app:layout_constraintTop_toBottomOf="@+id/needs_subtitle"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/needsRvHealth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needs_prichastiye"
        tools:listitem="@layout/prayers_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/needsRvPrichastiye"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needs_prichastiye"
        tools:listitem="@layout/prayers_list" />


</androidx.constraintlayout.widget.ConstraintLayout>